--- a/style.css
+++ b/style.css
@@ -4,14 +4,17 @@
 }
 nav {
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.514);
-  position: fixed;
+  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  color: chartreuse;
+  z-index: 199;
 }
 .logo {
   display: block;
   color: rgb(168, 0, 0);
   margin: 0px 100px;
   padding: 20px 20px;
+  font-weight: bolder;
 }
 .menu-items {
   margin: 0px;
@@ -27,31 +30,51 @@ nav {
 }
 
 .carousel .card {
-  background: red;
-  line-height: 250px;
   text-align: center;
   color: #fef;
-  font-size: 90px;
-  font-weight: 600;
-  box-shadow: 0px 4px 15px rgb(2, 3, 66);
   height: 100vh;
+  border: none;
+  cursor: grab;
 }
-.carousel .card-1 {
-  background: #aaaa;
+.slider-title-1 {
+  padding: 100px;
 }
-.carousel .card-2 {
-  background: rgba(148, 185, 16, 0.445);
+.slider-title-1 h1 {
+  font-weight: 800;
 }
-.carousel .card-3 {
-  background: #affa;
-}
-.carousel .card-4 {
-  background: #faaa;
-}
-.carousel .card-5 {
-  background: #afaa;
-}
+
 .card img {
-  height: inherit;
-  position: relative;
+  display: block;
+  width: 100%;
+}
+.text-overlay {
+  position: absolute;
+  z-index: 122;
+}
+.fact-wrapper {
+  padding: 10px;
+}
+.fact-number {
+  color: red;
+  font-size: 50px;
+  font-weight: bold;
+  display: inline;
+}
+
+.fact-title,
+.fact-title h1 {
+  display: inline;
+}
+.fact {
+  margin: 10px 0px;
+}
+.about-us-wrapper {
+  margin: 20px 0;
+}
+.about-us-image {
+  width: 100%;
+}
+.no-padding-margin {
+  margin: 0 !important;
+  padding: 0 !important;
 }
