--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   position: fixed;
   height: 100vh;
   width: 90px;
-  background-color: black;
+  background-color: #fff;
 }
 
 .sidebar-part-1 {
@@ -29,11 +29,11 @@
 
 .sidebar-part-3 {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
 }
 .menu-icon:before {
   content: '';
-  background-color: cyan;
+  background-color: rgb(190, 188, 188);
   width: 100%;
   height: 1px;
   position: absolute;
@@ -58,9 +58,9 @@
   width: 23px;
   display: block;
   position: absolute;
-  background-color: cyan;
-  animation: all ease-in-out 2s;
+  background-color: #161515;
 }
+
 .menu-icon span:nth-child(1) {
   top: 0px;
 }
@@ -70,4 +70,8 @@
 }
 .menu-icon span:nth-child(4) {
   top: 16px;
+}
+
+.menu-btn:hover span {
+  background-color: crimson !important;
 }
