--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 }
 body {
   background-color: rgb(202, 193, 175) !important;
+  height: 200vh;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .sidebar {
   position: fixed;
@@ -197,4 +199,99 @@ nav {
   top: 25%;
   left: 0;
   font-size: 20px;
+}
+.mySlides {
+  display: none;
+  height: 500px;
+  width: 100vw;
+  position: absolute;
+}
+img {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  /* position: relative;
+        margin: auto; */
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The rectangles/bullets/indicators */
+.rectangle {
+  cursor: pointer;
+  height: 50px;
+  width: 320px;
+  margin: 2px;
+  background-color: rgba(0, 0, 0, 0.178);
+  display: block;
+  transition: background-color 0.6s ease;
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  .text {
+    font-size: 11px;
+  }
+}
+.rectangle-container {
+  position: absolute;
+  top: 35%;
+  right: 0;
+  width: inherit;
+  overflow: hidden;
+  z-index: 100;
+}
+.fromLeft {
+  background-color: rgba(0, 0, 0, 0.541);
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  right: 350px;
+}
+.rec-text {
+  color: white;
+  position: relative;
+  z-index: 200;
+  top: 30%;
+  vertical-align: center;
+}
+.rec-text p {
+  display: inline-block;
+  margin: 0 40px;
+  font-size: 17px;
+  font-weight: 600;
+}
+.rec-text p:last-child:before {
+  content: '';
+  background-color: crimson;
+  width: 50px;
+  height: 2px;
+  position: absolute;
+  top: 10px;
+  left: 20%;
 }
