--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   position: absolute;
   bottom: 5px;
 }
-/* Sidebar Menu */
+/* Sidebar Menu button */
 
 .menu-icon:before {
   content: '';
@@ -83,7 +83,7 @@ body {
 .menu-btn:hover span {
   background-color: crimson !important;
 }
-
+/* Left sidebar  */
 .sidebar-part-2:before {
   content: '';
   display: inline-block;
@@ -316,15 +316,7 @@ nav {
   top: 13.5px;
   left: 23%;
 }
-.about-us {
-  padding-left: 90px;
-  margin-top: 30px;
-  visibility: hidden;
-}
-.about-us img {
-  width: 100%;
-  margin: 15px 0 10px;
-}
+
 /* effect for about us */
 @keyframes appear {
   0% {
@@ -338,4 +330,40 @@ nav {
 }
 .appear {
   animation: appear 1s;
+}
+/* About us section */
+.about-us {
+  padding-left: 90px;
+  margin: 30px 0 30px 0;
+  visibility: hidden;
+}
+.about-us-text {
+  position: relative;
+  top: 60px;
+}
+/* About us image */
+.about-us img {
+  width: 100%;
+  height: 400px;
+  margin: 15px 0 10px;
+}
+/* About us button */
+.about-us-button {
+  color: #faf3e4;
+  background-color: #2c2c2c;
+  border: 2px solid #2c2c2c;
+  position: relative;
+  top: 100px;
+  font-size: 14px;
+  transition: background-color 0.2s ease-in-out;
+}
+.about-us-button > p {
+  padding: 5px 25px 5px 25px;
+  margin: 0 !important;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 600;
+}
+.about-us-button:hover {
+  background-color: #faf3e4;
+  color: #2c2c2c;
 }
