--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ nav {
   position: relative;
   top: 100px;
   font-size: 14px;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2gs ease-in-out;
 }
 .about-us-button > p {
   padding: 5px 25px 5px 25px;
