--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ nav {
 /* About us image */
 .about-us img {
   width: 100%;
-  height: 400px;
+  height: 330px;
   margin: 15px 0 10px;
 }
 /* About us button */
@@ -406,12 +406,17 @@ nav {
   margin: 10px;
 }
 .services-title {
-  left: 5px;
+  left: 25px;
   width: 150px;
+  font-weight: 500;
+  color: rgb(26, 25, 25) 0;
+  margin: 5px auto;
 }
 .services-text {
   width: 180px;
-  left: -15px;
+  left: 20px;
+  color: rgb(109, 109, 109);
+  margin: auto;
 }
 .services-img {
   border-radius: 50%;
@@ -419,6 +424,7 @@ nav {
   height: 120px;
   width: 120px;
   position: relative;
+  margin: auto;
 }
 .services-img > img {
   height: 50px;
