--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ nav {
 
 /* Slider */
 .slider {
-  padding-left: 90px;
+  padding-left: 110px;
 }
 .mySlides {
   display: none;
@@ -385,7 +385,7 @@ nav {
 .services {
   width: 100%;
   background-color: #f5f5f5;
-  padding: 20px 0 20px 90px;
+  padding: 20px 0 20px 110px;
   margin-top: 60px;
 }
 
@@ -431,4 +431,26 @@ nav {
   position: relative;
   top: 35px;
   left: 35px;
+}
+
+/* Numbers*/
+
+.numbers {
+  width: 100vw;
+  height: 400px;
+  background-color: rgb(255, 255, 255);
+  padding-left: 110px;
+}
+.number-wrap p {
+  font-size: 35px;
+  font-weight: 555;
+  color: rgb(24, 24, 24);
+}
+.number-text::before {
+  content: '';
+  display: inline-block;
+  background-color: crimson;
+  height: 10px;
+  width: 2px;
+  position: relative;
 }
