--- a/style.css
+++ b/style.css
@@ -439,18 +439,32 @@ nav {
   width: 100vw;
   height: 400px;
   background-color: rgb(255, 255, 255);
-  padding-left: 110px;
+  padding: 60px 0px 60px 110px;
 }
-.number-wrap p {
+.number-wrap {
+  text-align: center;
+  display: none;
+  opacity: 0;
+  position: relative;
+  top: 0px;
+}
+.number-wrap > p {
   font-size: 35px;
   font-weight: 555;
-  color: rgb(24, 24, 24);
+  color: rgb(56, 56, 56);
+  display: inline-block;
+  margin: 0 !important;
 }
-.number-text::before {
+.number-text > p {
+  color: rgb(99, 99, 99);
+}
+.number-text::after {
   content: '';
   display: inline-block;
   background-color: crimson;
-  height: 10px;
-  width: 2px;
+  height: 20px;
+  width: 1px;
   position: relative;
+
+  align-items: center;
 }
