--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 }
 
 .sidebar-part-2 {
-  padding: 0 0 0 110px;
+  padding: 0 0 0 90px;
   border-right: 1px solid #dfdfdf;
   width: auto;
   height: 100%;
@@ -222,14 +222,14 @@ nav {
 
 /* Slider */
 .slider {
-  padding-left: 107px;
+  padding-left: 90px;
 }
-.mySlides {
+.slider-single {
   display: none;
   overflow: hidden;
   position: absolute;
 }
-.mySlides > img {
+.slider-single > img {
   height: 100vh;
   width: 100vw;
 }
@@ -347,7 +347,7 @@ nav {
 }
 /* About us section */
 .about-us {
-  padding-left: 107px;
+  padding-left: 90px;
   margin: 30px 0 30px 0;
   visibility: hidden;
 }
@@ -385,7 +385,7 @@ nav {
 .services {
   width: 100%;
   background-color: #f5f5f5;
-  padding: 20px 0 20px 107px;
+  padding: 20px 0 20px 90px;
   margin-top: 60px;
 }
 
@@ -437,7 +437,7 @@ nav {
 
 .numbers {
   background-color: rgb(255, 255, 255);
-  padding: 80px 0px 80px 107px;
+  padding: 80px 0px 80px 90px;
 }
 .number-wrap {
   text-align: center;
